8/final-exam-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-exam-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: final-exam-ibrohim.sts404.uz   
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: final-exam-service
            port:
              number: 80
